[package]
name = "fuzemill"
version = "0.2.0"
edition = "2024"
authors = ["Juan Bernardo Tobar <jbtobar.io@gmail.com>"]
description = "A Git workflow automation CLI for issue-driven development with AI agents."
license = "MIT"
repository = "https://github.com/arcafly/fuzemill"
readme = "README.md"
keywords = ["git", "workflow", "ai", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"